--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.1",
+    "@graphql-tools/stitch": "^8.4.3",
+    "@graphql-tools/utils": "^8.6.1",
+    "apollo-server": "^3.6.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.3.0",
     "graphql-import-files": "^1.0.18",
-    "graphql-tools": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "morgan": "^1.10.0"
