--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@graphql-tools/load-files": "^6.5.3",
     "@graphql-tools/schema": "^8.3.1",
     "@graphql-tools/stitch": "^8.4.3",
     "@graphql-tools/utils": "^8.6.1",
