--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc",
-    "dev": "nodemon --config nodemon.json src/index.ts",
+    "build": "tsc --build",
+    "build:gql": "ncp src dista --filter='^.+.(gql|graphql)$'",
+    "dev": "nodemon --config nodemon.json src/index.ts -e ts,gql,graphql",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Juan Diego D",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^16.11.7",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "tslint": "^6.1.3",
@@ -20,6 +22,7 @@
   },
   "dependencies": {
     "@graphql-tools/load-files": "^6.5.3",
+    "@graphql-tools/merge": "^8.2.2",
     "@graphql-tools/schema": "^8.3.1",
     "@graphql-tools/stitch": "^8.4.3",
     "@graphql-tools/utils": "^8.6.1",
@@ -32,6 +35,6 @@
     "graphql-import-files": "^1.0.18",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
-    "morgan": "^1.10.0"
+    "ncp": "^2.0.0"
   }
 }
