--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc --build",
-    "build:gql": "ncp src dista --filter='^.+.(gql|graphql)$'",
-    "dev": "nodemon --config nodemon.json src/index.ts -e ts,gql,graphql",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --config nodemon.json src/index.ts -e ts,gql,graphql"
   },
   "author": "Juan Diego D",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.11.7",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
@@ -21,20 +20,22 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@graphql-tools/load-files": "^6.5.3",
     "@graphql-tools/merge": "^8.2.2",
     "@graphql-tools/schema": "^8.3.1",
     "@graphql-tools/stitch": "^8.4.3",
     "@graphql-tools/utils": "^8.6.1",
     "apollo-server": "^3.6.3",
+    "apollo-server-express": "^3.6.3",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
+    "express-jwt": "^6.1.0",
     "graphql": "^16.3.0",
     "graphql-import-files": "^1.0.18",
+    "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.8",
-    "ncp": "^2.0.0"
+    "mongoose": "^6.1.8"
   }
 }
