--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
   },
   "lib": ["es2015"],
   "exclude": [ "node_modules" ],
-  "include": [ "src/**/*.ts","src/**/*.gql" ]
+  "include": [ "src/**/*.ts" ]
 }
