--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc --build",
+    "build": "tsc",
     "dev": "nodemon --config nodemon.json src/index.ts -e ts,gql,graphql"
   },
   "author": "Juan Diego D",
