--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,10 @@
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "removeComments": true
   },
   "lib": ["es2015"],
   "exclude": [ "node_modules" ],
-  "include": [ "src/**/*.ts" ]
+  "include": [ "src/**/*.ts", "src/graphql/campaings/schemas/campaing.ts" ]
 }
